<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CAISSE</string>
    <string name="title_activity_detail_info">Caisse enregistreuse</string>
    <string name="title_activity_web_view">Caisse enregistreuse</string>
    <string name="action_rss_mq">Actualité Martinique - uniquement</string>
    <string name="action_rss_gp">Actualité Guadeloupe - uniquement</string>
    <string name="action_rss_mq_short">Mada</string>
    <string name="action_rss_gp_short">Gwada</string>
    <string name="action_rss_all">Tout</string>
    <string name="saved_panier">panierData</string>
    <string name="more_activity_detail_info">En savoir plus</string>
    <string name="title">TITRE</string>
    <string name="description">DESCRIPTION</string>
    <string name="title_activity_main_tab">MainTabActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_money">+ caisse</string>
    <string name="action_remove_money">- caisse</string>
    <string name="action_total_caisse">total caisse</string>
    <string name="action_caisse">caisse</string>
    <string name="action_boisson">bar</string>
    <string name="action_snack">snack</string>
    <string name="action_reinit">Réinitialiser panier</string>
    <string name="action_config">Configurer caisse</string>
    <string name="string_config">Configuration de la session utilisateur</string>
    <string name="string_error_config">Les champs sont mal renseignés.</string>

    <!-- libelle detail panier-->
    <string name="string_commandes">Commandes</string>
    <string name="string_detail_commandes">Detail commande</string>

    <!-- utils-->
    <string name="loading">Chargement en cours</string>
    <string name="confirm_reinit">Voulez vous vraiment réinitialiser la caisse ?</string>
    <string name="ok">OK</string>
    <string name="annuler">Annuler</string>
    <string name="hello_world">Hello world!</string>
    <string name="string_a_propos">À propos</string>
    <string name="libelle_a_propos">Made by Gwada Incorporation</string>
    <string-array name="caisse_options">
        <item>Ajout liquide</item>
        <item>Retrait liquide</item>
        <item>Récapitulatif soirée</item>
    </string-array>
    <!-- KEY -->
    <string name="key_total">key_total</string>
    <string name="key_total_cb">key_total_cb</string>
    <string name="key_total_espece">key_total_espece</string>
    <string name="key_liste_mouvements">key_liste_mouvements</string>
    <string name="key_panier">key_panier</string>
    <string name="key_produits">key_produits</string>
    <string name="key_id_caisse">key_id_caisse</string>
    <string name="key_id_session">key_id_session</string>
    <string name="key_recap_PANIER">key_recap_panier</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_blank_fragment_produit">poduits</string>
    <color name="green">#006600</color>
    <string name="title_activity_detail_panier">DetailPanierActivity</string>
    <string name="string_recap_caisse">Commandes</string>
    <string name="date_commande">Date commande</string>
    <string name="nombre_d_articles">Nombre d\' articles</string>
    <string name="total_en">Total en €</string>
    <string name="r_glement_esp_ce">Règlement espèce:</string>
    <string name="r_glement_cb">Règlement CB:</string>
    <string name="total_caisse_courante_cb_espece">Total caisse courante CB + Espece</string>
    <string name="total_caisse_courante">Total caisse courante</string>
    <string name="liste_des_mouvements">Liste des mouvements</string>
    <string name="action_create_json">Stark</string>
</resources>