<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_rss_all"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/action_rss_all">
    </item>
    <item
        android:id="@+id/action_rss_gp"
        android:icon="@drawable/guadeloupe"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        android:title="@string/action_rss_gp_short">
    </item>
    <item
        android:id="@+id/action_rss_mq"
        android:icon="@drawable/martinique"
        android:orderInCategory="3"
        android:showAsAction="ifRoom"
        android:title="@string/action_rss_mq_short">
    </item>
    <item
        android:id="@+id/action_rss_mq2"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/action_rss_mq_short">
    </item>

</menu>